--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,97 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Documentação FoxPixel"
+description: "Central de documentação da plataforma FoxPixel e do Tenant Admin — módulos, APIs e guias para equipas e integradores."
 ---
 
-## Setting up
+## Bem-vindo à documentação FoxPixel
 
-Get your documentation site up and running in minutes.
+Aqui encontras tudo o que precisas para perceber e usar a **FoxPixel**: a plataforma que une backend, tenant admin e módulos por tenant. A documentação está organizada para equipas técnicas e para quem integra ou estende o sistema.
 
 <Card
-  title="Start here"
+  title="Começar"
   icon="rocket"
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
+  Configuração rápida e primeiro acesso ao ambiente de documentação e desenvolvimento.
 </Card>
 
-## Make it yours
+## Explorar a plataforma
 
-Design a docs site that looks great and empowers your users.
+Conhecer a estrutura do **Tenant Admin** e do backend ajuda a tirar partido dos módulos e das APIs.
 
 <Columns cols={2}>
   <Card
-    title="Edit locally"
+    title="Desenvolvimento local"
     icon="pen-to-square"
     href="/development"
   >
-    Edit your docs locally and preview them in real time.
+    Editar e ver as alterações em tempo real no teu ambiente.
   </Card>
   <Card
-    title="Customize your site"
+    title="Personalizar o site"
     icon="palette"
     href="/essentials/settings"
   >
-    Customize the design and colors of your site to match your brand.
+    Ajustar cores e aparência para alinhar com a tua marca ou projeto.
   </Card>
-    <Card
-    title="Set up navigation"
+  <Card
+    title="Navegação e estrutura"
     icon="map"
     href="/essentials/navigation"
   >
-    Organize your docs to help users find what they need and succeed with your product.
+    Organizar páginas e secções para facilitar a descoberta do conteúdo.
   </Card>
   <Card
-    title="API documentation"
+    title="Referência de API"
     icon="terminal"
     href="/api-reference/introduction"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Documentação gerada a partir de especificações OpenAPI.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Conteúdo e escrita
 
-Everything you need to create world-class documentation.
+Guias e boas práticas para manter a documentação clara e útil.
 
 <Columns cols={2}>
   <Card
-    title="Write with MDX"
+    title="Escrever com MDX"
     icon="pen-fancy"
     href="/essentials/markdown"
   >
-    Use MDX to style your docs pages.
+    Usar MDX para combinar texto e componentes nas páginas.
   </Card>
   <Card
-    title="Code samples"
+    title="Exemplos de código"
     icon="code"
     href="/essentials/code"
   >
-    Add sample code to demonstrate how to use your product.
+    Incluir snippets e exemplos para demonstrar uso das APIs e fluxos.
   </Card>
   <Card
-    title="Images"
+    title="Imagens e media"
     icon="image"
     href="/essentials/images"
   >
-    Display images and other media.
+    Adicionar imagens, diagramas e outros recursos visuais.
   </Card>
   <Card
-    title="Reusable snippets"
+    title="Snippets reutilizáveis"
     icon="recycle"
     href="/essentials/reusable-snippets"
   >
-    Write once and reuse across your docs.
+    Criar blocos de conteúdo reutilizáveis em várias páginas.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Suporte
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Contactar a FoxPixel"
+  icon="circle-question"
+  href="mailto:info@usefoxpixel.com"
 >
-  Browse our showcase of exceptional documentation sites.
+  Dúvidas sobre a FoxPixel, Tenant Admin ou integrações? Envia-nos um email.
 </Card>
