--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,62 @@
 ---
-title: "Documentação FoxPixel"
-description: "Central de documentação da plataforma FoxPixel e do Tenant Admin — módulos, APIs e guias para equipas e integradores."
+title: "Bem-vindo à FoxPixel"
+description: "Aprenda a usar o seu painel Fox Pixel OS — módulo a módulo. Documentação para clientes FoxPixel."
 ---
 
-## Bem-vindo à documentação FoxPixel
+## O que é esta documentação?
 
-Aqui encontras tudo o que precisas para perceber e usar a **FoxPixel**: a plataforma que une backend, tenant admin e módulos por tenant. A documentação está organizada para equipas técnicas e para quem integra ou estende o sistema.
+Esta é a **documentação para clientes FoxPixel**. Aqui encontra tudo o que precisa para **aprender a usar o seu painel** (Fox Pixel OS): o que cada módulo faz, como criar orçamentos e faturas, como gerir clientes, custos e lucros, e onde encontrar cada funcionalidade.
+
+O seu negócio tem um sistema e um site feitos à sua medida. Nós ocupamo-nos de toda a parte tecnológica; esta documentação ajuda-o a tirar o máximo partido da plataforma.
 
 <Card
-  title="Começar"
-  icon="rocket"
-  href="/quickstart"
+  title="O seu plano e preços"
+  icon="circle-euro"
+  href="/o-seu-plano"
   horizontal
 >
-  Configuração rápida e primeiro acesso ao ambiente de documentação e desenvolvimento.
+  Como funciona o fluxo desde o setup até à mensalidade. €300 setup + €150/mês, tudo incluído.
 </Card>
 
-## Explorar a plataforma
-
-Conhecer a estrutura do **Tenant Admin** e do backend ajuda a tirar partido dos módulos e das APIs.
+## Começar a usar o painel
 
 <Columns cols={2}>
   <Card
-    title="Desenvolvimento local"
-    icon="pen-to-square"
-    href="/development"
+    title="Primeiro acesso"
+    icon="right-to-bracket"
+    href="/primeiro-acesso"
   >
-    Editar e ver as alterações em tempo real no teu ambiente.
+    Entrar na Área Cliente, fazer login e conhecer o ecrã principal do seu painel.
   </Card>
   <Card
-    title="Personalizar o site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Módulo Projetos"
+    icon="folder-open"
+    href="/modulos/projetos"
   >
-    Ajustar cores e aparência para alinhar com a tua marca ou projeto.
-  </Card>
-  <Card
-    title="Navegação e estrutura"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organizar páginas e secções para facilitar a descoberta do conteúdo.
-  </Card>
-  <Card
-    title="Referência de API"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Documentação gerada a partir de especificações OpenAPI.
+    Orçamentos, faturas, custo do serviço, lucro, impostos e geração automática de documentos.
   </Card>
 </Columns>
 
-## Conteúdo e escrita
+## Módulos disponíveis
 
-Guias e boas práticas para manter a documentação clara e útil.
+Cada módulo do seu painel cobre uma parte da operação do seu negócio. Consoante o que tiver sido configurado para si, terá acesso a:
 
-<Columns cols={2}>
-  <Card
-    title="Escrever com MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Usar MDX para combinar texto e componentes nas páginas.
-  </Card>
-  <Card
-    title="Exemplos de código"
-    icon="code"
-    href="/essentials/code"
-  >
-    Incluir snippets e exemplos para demonstrar uso das APIs e fluxos.
-  </Card>
-  <Card
-    title="Imagens e media"
-    icon="image"
-    href="/essentials/images"
-  >
-    Adicionar imagens, diagramas e outros recursos visuais.
-  </Card>
-  <Card
-    title="Snippets reutilizáveis"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Criar blocos de conteúdo reutilizáveis em várias páginas.
-  </Card>
-</Columns>
+| Módulo | O que faz |
+|--------|-----------|
+| **Projetos** | Orçamentos, faturas, custo do serviço, lucro, impostos. Geração automática de orçamentos e faturas. |
+| **Clientes (CRM)** | Base de clientes, contactos e histórico. |
+| **Financeiro** | Transações, contas a pagar e a receber. |
+| **RH** | Funcionários, processamento mensal, calendário. |
+| **Prospecção** | Campanhas, leads e templates de contacto. |
 
-## Suporte
+A documentação de cada módulo explica **o que é**, **o que consegue calcular ou gerir** e **como usar** no dia a dia. Comece pelo [Módulo Projetos](/modulos/projetos) se trabalha com orçamentos e faturação.
+
+## Precisa de ajuda?
 
 <Card
-  title="Contactar a FoxPixel"
+  title="Falar com a FoxPixel"
   icon="circle-question"
   href="mailto:info@usefoxpixel.com"
 >
-  Dúvidas sobre a FoxPixel, Tenant Admin ou integrações? Envia-nos um email.
+  Dúvidas sobre o sistema, o seu plano ou funcionalidades? Envie-nos um email. Suporte e manutenção estão incluídos no seu plano.
 </Card>
